--- a/nflk-live/nflk-live.css
+++ b/nflk-live/nflk-live.css
@@ -1,39 +1,41 @@
-﻿body {
-        background-color:#c8c8c8;
-        width: 1000px;
+﻿body{
+    background-color:#c8c8c8;
+    width: 1000px;
+}
+img.header{
+    width: 100%;
+    border: 2px solid white;
+}
+
+div#twt-display{
+    position: relative;
+    padding: 8px;
+    height: 60px;
 }
 a.twtlink{
-        color: #FFFFFF;
-        text-decoration: none;
+    color: #FFFFFF;
+    text-decoration: none;
 }
 a.twtlink:hover{
-        text-decoration: none;
+    text-decoration: none;
 }
 img.profile{
-        border: 1px solid #333;
+    border: 1px solid #333;
 }
 div.text{
-        margin-left: 6px;
-        line-height: 12px;
-        overflow: hidden;
+    margin-left: 6px;
+    line-height: 12px;
+    overflow: hidden;
 }
 p.text{
-        margin-top: 5px;
-}
-div#twt-display{
-        position: relative;
-        padding: 8px;
-        height: 60px;
-}
-div#twt-display table tr td{
-        font-size: 18px;
+    margin-top: 5px;
 }
 div#twtsearch{
-        color: #424242;
-        font-size: 18px;
-        font-family: helvetica;
-        text-align: right;
-        
+    color: #424242;
+    font-size: 18px;
+    font-family: helvetica;
+    text-align: right;
+
 }
 
 div#twtqueue{
@@ -47,75 +49,74 @@ div#twtqueue span#term{
     font-size:18px;
 }
 canvas#swirl{
-        margin-bottom: -24px;
-        width: 500;
-        height: 500;
+    margin-bottom: -24px;
 }
 input#twtsearchinput{
-        border: 4px solid;
-        border-color: #6464C9;
-        font-size: 28px; 
-        color: #666;
-        position: relative; 
+    border: 4px solid;
+    border-color: #6464C9;
+    font-size: 28px; 
+    color: #666;
+    position: relative; 
 }
 div#left-column{
-        background-color:#C8C8C8;
-        position: relative;
-        vertical-align: 0%;
-        width: 500px;
+    background-color:#C8C8C8;
+    position: relative;
+    vertical-align: 0%;
+    width: 600px;
 }
 div#right-column{
-        margin-left: 500px;
-        margin-top: -570px;
-        width: 500px;
-        text-align: left;
-        line-height: 20px;
-        font-size: 22px;
-        color: #666;
+    margin-left: 600px;
+    margin-top: -670px;
+    width: 400px;
+    text-align: left;
+    line-height: 20px;
+    font-size: 22px;
+    color: #666;
 }
 div#right-column table{
     width: 100%;
 }
 div.twttext{
-        margin-left: 60px;
-        margin-right: 16px;
-        line-height: 12px;
+    margin-left: 60px;
+    margin-right: 16px;
+    line-height: 16px;
+    font-size: 16px;
 }
 
 
 div.twt
 {
-        padding:  5px;
-        border:  5px solid #fff;
+    padding:  5px;
+    border:  5px solid #fff;
 
-        background: #C8C8C8;
-        font-family: helvetica;
-        font-size:  16px;
-        color:  #000;
-        overflow:  hidden;
-        position: relative;
+    background: #C8C8C8;
+    font-family: helvetica;
+    font-size:  16px;
+    color:  #000;
+    overflow:  hidden;
+    position: relative;
 }
 div.twttext p.twttext
 {
-        margin-top: 3px;
+    margin-top: 3px;
 }
 div.twt:hover
 {
-        background: #6464C9;
+    background: #6464C9;
 }
 
 
 div.twt img.profile
 {
-        float:  left;
-        background: #000;
-        border-top:  1px solid #333;
-        border-left:  1px solid #333;
-        border-bottom:  1px solid #666;
-        border-right:  1px solid #666;
+    float:  left;
+    background: #000;
+    border-top:  1px solid #333;
+    border-left:  1px solid #333;
+    border-bottom:  1px solid #666;
+    border-right:  1px solid #666;
 }
 div#twtblock{
-        height:510;
-        width: 100%;
-        overflow-y: auto;
+    height:550;
+    width: 100%;
+    overflow-y: auto;
 }
