--- a/nflk-live/nflk-live.css
+++ b/nflk-live/nflk-live.css
@@ -1,6 +1,6 @@
 ﻿body{
-    background-color:#c8c8c8;
-    width: 1000px;
+    background-color:#fff;
+    width: 1100px;
 }
 img.header{
     width: 100%;
@@ -8,6 +8,7 @@ img.header{
 }
 
 div#twt-display{
+	background-color:#fff;
     position: relative;
     padding: 8px;
     height: 60px;
@@ -53,6 +54,7 @@ div#twtqueue span#term{
 }
 canvas#swirl{
     margin-bottom: -24px;
+    background-color:#fff;
 }
 input#twtsearchinput{
     border: 4px solid;
@@ -62,7 +64,7 @@ input#twtsearchinput{
     position: relative; 
 }
 div#left-column{
-    background-color:#C8C8C8;
+    background-color:#fff;
     position: relative;
     vertical-align: 0%;
     width: 600px;
@@ -70,7 +72,7 @@ div#left-column{
 div#right-column{
     margin-left: 600px;
     margin-top: -670px;
-    width: 400px;
+    width: 500px;
     text-align: left;
     line-height: 20px;
     font-size: 22px;
